--- a/src/html/usual-menu.html
+++ b/src/html/usual-menu.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Liquomend | Usual Menu</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
-      integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/menu.css" />
   </head>
   <body>
@@ -17,10 +12,7 @@
       <div id="contents-container">
         <div class="mobile-menu__cover"></div>
         <header class="header m-3">
-          <button
-            onclick="document.querySelector('#global-container').classList.toggle('menu-open')"
-            class="mobile-menu__btn"
-          >
+          <button onclick="document.querySelector('#global-container').classList.toggle('menu-open')" class="mobile-menu__btn">
             <span></span>
             <span></span>
             <span></span>
@@ -43,12 +35,7 @@
 
         <div class="select-base">
           <div class="extract-outer">
-            <select
-              name="extract"
-              id="extract"
-              class="pulldown extract"
-              placeholder="Base"
-            >
+            <select name="extract" id="extract" class="pulldown extract" placeholder="Base">
               <option class="extract__base" value="liquor">リキュール</option>
               <option class="extract__base" value="gin">ジン</option>
               <option class="extract__base" value="rum">ラム</option>
@@ -65,11 +52,7 @@
             <ul class="cocktail__list">
               <li class="cocktail__item liquor">
                 <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
+                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">カシスオレンジ</h5>
                     <p class="cocktail__text">カシスリキュール</p>
@@ -78,11 +61,7 @@
               </li>
               <li class="cocktail__item liquor">
                 <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
+                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">ピーチフィズ</h5>
                     <p class="cocktail__text">ピーチリキュール</p>
@@ -91,11 +70,7 @@
               </li>
               <li class="cocktail__item gin">
                 <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
+                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">ジンライム</h5>
                     <p class="cocktail__text">ジンベース</p>
@@ -104,11 +79,7 @@
               </li>
               <li class="cocktail__item tequila">
                 <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
+                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">クエルボゴールド</h5>
                     <p class="cocktail__text">テキーラベース</p>
@@ -117,11 +88,7 @@
               </li>
               <li class="cocktail__item vodka">
                 <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
+                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">レッドブルウォッカ</h5>
                     <p class="cocktail__text">ウォッカベース</p>
@@ -130,11 +97,7 @@
               </li>
               <li class="cocktail__item rum">
                 <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
+                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">ラムコーク</h5>
                     <p class="cocktail__text">ラムベース</p>
@@ -143,11 +106,7 @@
               </li>
               <li class="cocktail__item gin">
                 <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
+                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">ジンライム</h5>
                     <p class="cocktail__text">ジンベース</p>
@@ -156,11 +115,7 @@
               </li>
               <li class="cocktail__item liquor">
                 <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
+                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">カシスウーロン</h5>
                     <p class="cocktail__text">カシスリキュール</p>
@@ -169,11 +124,7 @@
               </li>
               <li class="cocktail__item other">
                 <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
+                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">ジャスハイ</h5>
                     <p class="cocktail__text">焼酎ベース</p>
@@ -221,17 +172,13 @@
           </li>
         </ul>
         <div class="mobile-menu__logo">
-          <img src="./img/logo2.png" alt="logo2 image" />
+          <img src="./img/logo2.png" alt="logo2 image" onclick="location.href='./about.php' ;" />
         </div>
         <div class="mobile-menu__sns">各種logoが入ります</div>
       </nav>
     </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="./scripts/pulldown.js"></script>
     <script src="./scripts/extract.js"></script>
   </body>
