--- a/src/html/home.html
+++ b/src/html/home.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Liquomend | Home</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
-      integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/home.css" />
   </head>
   <body>
@@ -46,11 +41,7 @@
                 <div class="col-4 col-md-2 offset-md-3">
                   <li class="cocktail__item">
                     <a href="./detail.html" class="cocktail__link">
-                      <img
-                        src="./img/sample-drink.jpg"
-                        alt="sample drink image"
-                        class="cocktail__img"
-                      />
+                      <img src="./img/sample-drink.jpg" alt="sample drink image" class="cocktail__img" />
                       <div class="cocktail__description">
                         <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
                         <p class="cocktail__text text-truncate">ベースリキュール</p>
@@ -61,11 +52,7 @@
                 <div class="col-4 col-md-2">
                   <li class="cocktail__item">
                     <a href="./detail.html" class="cocktail__link">
-                      <img
-                        src="./img/sample-drink.jpg"
-                        alt="sample drink image"
-                        class="cocktail__img"
-                      />
+                      <img src="./img/sample-drink.jpg" alt="sample drink image" class="cocktail__img" />
                       <div class="cocktail__description">
                         <h5 class="cocktail__title text-truncate">カクテル名</h5>
                         <p class="cocktail__text text-truncate">ベースリキュール</p>
@@ -76,11 +63,7 @@
                 <div class="col-4 col-md-2">
                   <li class="cocktail__item">
                     <a href="./detail.html" class="cocktail__link">
-                      <img
-                        src="./img/sample-drink.jpg"
-                        alt="sample drink image"
-                        class="cocktail__img"
-                      />
+                      <img src="./img/sample-drink.jpg" alt="sample drink image" class="cocktail__img" />
                       <div class="cocktail__description">
                         <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
                         <p class="cocktail__text text-truncate">ベースリキュール</p>
@@ -88,11 +71,7 @@
                     </a>
                   </li>
                 </div>
-
               </div>
-
-
-
             </ul>
           </div>
         </div>
@@ -104,11 +83,7 @@
                 <div class="col-4 col-md-2 offset-md-3">
                   <li class="cocktail__item">
                     <a href="./detail.html" class="cocktail__link">
-                      <img
-                        src="./img/sample-drink.jpg"
-                        alt="sample drink image"
-                        class="cocktail__img"
-                      />
+                      <img src="./img/sample-drink.jpg" alt="sample drink image" class="cocktail__img" />
                       <div class="cocktail__description">
                         <h5 class="cocktail__title text-truncate">カクテル名</h5>
                         <p class="cocktail__text text-truncate">ベースリキュール</p>
@@ -119,11 +94,7 @@
                 <div class="col-4 col-md-2">
                   <li class="cocktail__item">
                     <a href="./detail.html" class="cocktail__link">
-                      <img
-                        src="./img/sample-drink.jpg"
-                        alt="sample drink image"
-                        class="cocktail__img"
-                      />
+                      <img src="./img/sample-drink.jpg" alt="sample drink image" class="cocktail__img" />
                       <div class="cocktail__description">
                         <h5 class="cocktail__title text-truncate">カクテル名</h5>
                         <p class="cocktail__text text-truncate">ベースリキュール</p>
@@ -134,11 +105,7 @@
                 <div class="col-4 col-md-2">
                   <li class="cocktail__item">
                     <a href="./detail.html" class="cocktail__link">
-                      <img
-                        src="./img/sample-drink.jpg"
-                        alt="sample drink image"
-                        class="cocktail__img"
-                      />
+                      <img src="./img/sample-drink.jpg" alt="sample drink image" class="cocktail__img" />
                       <div class="cocktail__description">
                         <h5 class="cocktail__title text-truncate">カクテル名</h5>
                         <p class="cocktail__text text-truncate">ベースリキュール</p>
@@ -146,7 +113,6 @@
                     </a>
                   </li>
                 </div>
-
               </div>
             </ul>
             <div class="more-btn">
@@ -181,7 +147,7 @@
       <nav class="mobile-menu">
         <div class="mobile-menu__profile">
           <div class="mobile-menu__icon">
-            <img src="./img/sample-drink.jpg" alt="icon sample image">
+            <img src="./img/sample-drink.jpg" alt="icon sample image" />
           </div>
           <div class="mobile-menu__username">User Name</div>
         </div>
@@ -212,7 +178,7 @@
           </li>
         </ul>
         <div class="mobile-menu__logo">
-          <img src="./img/logo2.png" alt="logo2 image" onclick="location.href = './about.html'">
+          <img src="./img/logo2.png" alt="logo2 image" onclick="location.href='./about.php' ;" />
         </div>
         <div class="mobile-menu__sns">各種logoが入ります</div>
       </nav>
