--- a/src/html/register.html
+++ b/src/html/register.html
@@ -96,7 +96,7 @@
           </li>
         </ul>
         <div class="mobile-menu__logo">
-          <img src="./img/logo2.png" alt="logo2 image" onclick="location.href='./about.php' ;" />
+          <img src="./img/logo2.png" alt="logo2 image" onclick="location.href='./controller/about.php' ;" />
         </div>
         <div class="mobile-menu__sns">各種logoが入ります</div>
       </nav>
